kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fover-library-deploy
  labels:
    app: fover-library-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: fover-library-deploy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fover-library-deploy
    spec:
      containers:
      - name: foverbr
        image: <IMAGE>
        securityContext: 
          privileged: true
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        resource:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service

metadata:
  name: fover-library-deploy
  labels:
    app: fover-library-deploy

spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: fover-library-deploy
